--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-* {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-}
-
-.scrollbar-x {
-    overflow-x: scroll;
-}
-
-.scrollbar-x::-webkit-scrollbar {
-    display: none;
-}
-
-.scrollbar-y::-webkit-scrollbar {
-    display: none;
-}
-
 body {
-    overflow-y: scroll;
-    height: 100vh;
+    font-family: 'Rajdhani', sans-serif;
+    background-color: #f8f8f8;
 }
 
-body::-webkit-scrollbar {
-    display: none;
+.hero-diagonal {
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+}
+
+.product-card:hover {
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+}
+
+.avatar-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #ff3a2d;
+    color: white;
+    font-weight: bold;
+}
+
+.diagonal-section {
+    position: relative;
+    overflow: hidden;
+}
+
+.diagonal-section::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ff3a2d;
+    transform: skewY(-5deg);
+    transform-origin: top left;
+    z-index: -1;
 }
